--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
+    "base64-sol": "^1.1.0",
     "chai": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
